[Shivani] : Added : Auth service code